# serializer version: 1
# name: test_execute
  list([
    dict({
      'Error': None,
      'File': '@SNOWCLI_TESTING_REPO/branches/main/tests_integration/test_data/projects/stage_execute/script_template.sql',
      'Status': 'SUCCESS',
    }),
  ])
# ---
# name: test_execute_python
  list([
    dict({
      'Error': None,
      'File': '@snowcli_testing_repo/branches/main/tests_integration/test_data/projects/stage_execute/script1.py',
      'Status': 'SUCCESS',
    }),
  ])
# ---
# name: test_git_execute_python_without_requirements
  list([
    dict({
      'Error': None,
      'File': '@snowcli_testing_repo/branches/main/tests_integration/test_data/projects/stage_execute_without_requirements/script_template.py',
      'Status': 'SUCCESS',
    }),
  ])
# ---
# name: test_execute_with_name_in_pascal_case
  list([
    dict({
      'Error': None,
      'File': '@SNOWCLI_TESTING_REPO/branches/main/tests_integration/test_data/projects/stage_execute/ScriptInPascalCase.sql',
      'Status': 'SUCCESS',
    }),
  ])
# ---
